# browser-agent-team-command-center

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  TODO.md  agent.py  agent_logs.json  config.example  event_queue.py  helpers.py  pyproject.toml  test_sdk_agent.py
.claude/agents/: browser-agent.md
.claude/notes/: browser-use-visual-feedback.md
.claude/skills/browser-team/: SKILL.md
backend/: .dockerignore  Dockerfile  agent.py  alembic.ini  env.example  helpers.py  pyproject.toml  railway.toml  server.py  start.sh  test_sdk_agent.py
backend/alembic/: env.py
backend/alembic/versions/: 8166fe3f5797_initial.py  a2b3c4d5e6f7_add_agent_run_logs.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  agent_run.py  agent_run_log.py  message.py  session.py  user.py
backend/app/routers/: auth.py  internal.py  messages.py  sessions.py  tasks.py
backend/app/schemas/: agent_run.py  auth.py  message.py  session.py
backend/app/services/: agent_registry.py  agent_runner.py  auth.py  orchestrator.py  sse.py
backend/scripts/: browser_agent.py
backend/tests/: conftest.py  test_auth.py  test_browser_agent.py  test_sse.py
docs/: architecture.md  browser-agent-screenshot-streaming.md  new-project-flow.md  orchestrator-agent-status-flow.md  visualization-tab-ideas.md
frontend/: README.md  env.example  package-lock.json  package.json  railway.toml
frontend/src/: app.css  hooks.client.ts
frontend/src/convex/: agentRuns.ts  files.ts  messages.ts  schema.ts  sessions.ts
frontend/src/convex/_generated/: api.d.ts
frontend/src/lib/: api.ts  convex.ts  index.ts  palette.ts
frontend/src/lib/chat/: AgentMentionInput.svelte  (+6 more)
frontend/src/routes/: +layout.svelte  +page.svelte
logs/: events.jsonl
scripts/: browser_agent.py  team.fish  test_orchestrator.py  test_sdk.py
(+39 files in other folders)
