[project]
name = "browser-agent-team"
version = "0.1.0"
description = "Browser Agent Team Command Center - multi-agent browser automation via Claude Code"
requires-python = ">=3.11,<3.14"
dependencies = [
    "browser-use>=0.2.0",
    "browser-use-sdk>=2.0.0",
    "claude-agent-sdk>=0.1.44",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "langchain-openai>=0.3.0",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
]

[tool.uv]
python-preference = "managed"
